summaries/errors.txt
❌ get_weather_data ERROR (2025-07-22 11:30:06 AM EDT):
Traceback (most recent call last):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/get_weather_data.py", line 84, in <module>
    main()
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/get_weather_data.py", line 23, in main
    with open(LOG_FILE, "w") as log:
FileNotFoundError: [Errno 2] No such file or directory: 'summaries/Activate3/get_weather_data.log'

---

❌ combine_pitcher_weather_park_away ERROR (2025-07-22 11:30:13 AM EDT):
  File "/home/runner/work/sports-betting-site/sports-betting-site/scripts/combine_pitcher_weather_park_away.py", line 30
    on=["last_name, first_name", "away_team
                                 ^
SyntaxError: unterminated string literal (detected at line 30)

---

